--- a/server/djangoapp/templates/djangoapp/login.html
+++ b/server/djangoapp/templates/djangoapp/login.html
@@ -6,7 +6,8 @@
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-    <body>
+<body>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -51,28 +52,23 @@
         </div>
     </nav>
 
-    <form action="{% url 'djangoapp:registration' %}" method="post">
+    <form action="{% url 'djangoapp:login' %}" method="post">
+        {% csrf_token %}
         <div class="container">
-            {% csrf_token %}
-            <h1>Sign Up</h1>
-            <hr>
+            <h1>Login</h1>
             <div class="form-group">
-                <label for="username"><b>User Name</b></label>
-                <input type="text" class="form-control" placeholder="Enter User Name: " name="username" required>
-                <label for="firstname"><b>First Name</b></label>
-                <input type="text" class="form-control" placeholder="Enter First Name: " name="firstname" required>
-                <label for="lastname"><b>Last Name</b></label>
-                <input type="text" class="form-control" placeholder="Enter Last Name: " name="lastname" required>
-                <label for="psw"><b>Password</b></label>
-                <input type="password" class="form-control" placeholder="Enter Password: " name="psw" required>
+              <label for="username"><b>User Name</b></label>
+              <input id="username" class = "form-control" type="text" placeholder="Enter User Name: " name="username" required>
+              <label for="psw"><b>Password</b></label>
+              <input id="psw" class = "form-control" type="password"  placeholder="Enter Password: " name="psw" required>
             </div>
             {% if message %}
-            <div class="alert alert-warning">
+              <div class="alert alert-warning">
                 {{ message }}
-            </div>
+              </div>
             {% endif %}
-            <button class="btn btn-primary" type="submit">Sign up</button>
+            <button class="btn btn-primary" type="submit">Login</button>
         </div>
     </form>
-    </body>
-</html>
+
+</body>
