--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -1,78 +1,31 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-    <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                  <a class="navbar-brand" href="{% url 'djangoapp:index' %}"></a>
-            </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'djangoapp:index' %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'djangoapp:about' %}">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                <li>
-                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
-                </li>
-                {% else %}
-                <li>
-                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
-                        {% csrf_token %}
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Password" name="psw" >
-                            <button class="btn btn-primary" type="submit">Login</button>
-                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
-                        </div>
-                    </form>
-                </li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
-
-    <form action="{% url 'djangoapp:registration' %}" method="post">
-        <div class="container">
+{% extends "djangoapp/layout.html" %} {% block content %}
+<h1 class="skeleton-heading">Register Account</h1>
+<div class="row">
+    <div class="col-12 bg-dark p-4 text-white">
+        <form class="flex bg-dark text-white my-2" action="{% url 'djangoapp:registration' %}" method="post">
             {% csrf_token %}
-            <h1>Sign Up</h1>
-            <hr>
-            <div class="form-group">
-                <label for="username"><b>User Name</b></label>
-                <input type="text" class="form-control" placeholder="Enter User Name: " name="username" required>
-                <label for="firstname"><b>First Name</b></label>
-                <input type="text" class="form-control" placeholder="Enter First Name: " name="firstname" required>
-                <label for="lastname"><b>Last Name</b></label>
-                <input type="text" class="form-control" placeholder="Enter Last Name: " name="lastname" required>
-                <label for="psw"><b>Password</b></label>
-                <input type="password" class="form-control" placeholder="Enter Password: " name="psw" required>
+            <div class="row justify-content-center">
+                <div class="col-6 text-left">
+                    <div class="form-group">
+                        <label for="username">User Name</label>
+                        <input id="username" class="form-control bg-dark text-white mr-2 w-100" type="text" name="username" placeholder="Enter your user name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="firstname">First Name</label>
+                        <input id="firstname" class="form-control bg-dark text-white mr-2 w-100" type="text" name="firstname" placeholder="Enter your first name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="lastname">Last Name</label>
+                        <input id="lastname" class="form-control bg-dark text-white mr-2 w-100" type="text" name="lastname" placeholder="Enter your last name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input id="password" class="form-control bg-dark text-white mr-2 w-100" type="password" name="password" placeholder="Enter your password" required>
+                    </div>
+                    <button class="btn bg-orange text-white" type="submit">Register</button>
+                </div>
             </div>
-            {% if message %}
-            <div class="alert alert-warning">
-                {{ message }}
-            </div>
-            {% endif %}
-            <button class="btn btn-primary" type="submit">Sign up</button>
-        </div>
-    </form>
-    </body>
-</html>
+        </form>
+    </div>
+</div>
+{% endblock %}
