--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -1,99 +1,48 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
-
-</head>
-    <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                  <a class="navbar-brand" href="{% url 'djangoapp:index' %}"></a>
-            </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'djangoapp:index' %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'djangoapp:about' %}">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                <li>
-                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
-                </li>
-                {% else %}
-                <li>
-                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
-                        {% csrf_token %}
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Password" name="psw" >
-                            <button class="btn btn-primary" type="submit">Login</button>
-                            <a class="btn btn-link" href="{% url 'djangoapp:registration' %}">Sign Up</a>
-                        </div>
-                    </form>
-                </li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
-
-    {% if user.is_authenticated %}
-
-    <h2>Add a review about {{ dealer.full_name }}</h2>
-
-    <form action="{% url 'djangoapp:add_review' dealer_id %}" method="post">
-        <div class="container">
-            {% csrf_token %}
-                <input type="hidden" name="username" value="{{ user.first_name }}({{ user.username }})">
-                <label for="review"><b>Enter the review content:</b></label>
-                <textarea class="form-control" id="review" name="review" rows="2" required></textarea>
-                <div class="form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" type="checkbox" name="purchase" id="purchase">
-                        Has purchased the car from {{dealer.full_name}}?
-                    </label>
+{% extends 'djangoapp/layout.html' %}{% block content %}
+<h1 class="skeleton-heading">Add Review</h1>
+<div class="row">
+    <div class="col-12 col-lg-6 offset-lg-3 p-2 h-100 d-flex  bg-dark text-white">
+        <div class="card-body bg-dark text-white">
+            {% if user.is_authenticated %}
+            <form action="{% url 'djangoapp:add_review' dealer_id dealer_name %}" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="fullname">Full Name</label>
+                    <input id="fullname" class="form-control bg-dark text-white mr-2" type="text" name="fullname" placeholder="Enter your name..." value="{{ user.first_name }}" required>
                 </div>
-                <select name="car" id="car" class="form-select" required>
-                    {% for car in cars %}
-                        <option selected value={{car.id}}>{{car.name}}-{{car.make.name}}-{{ car.year|date:"Y" }}</option>
-                    {% endfor %}
-                </select>
-                <label for="review"><b>Select Your Purchase Date:</b></label>
-                <input class="date-own form-control" type="date" name="purchase_date" id="purchase_date">
-            {% if message %}
-            <div class="alert alert-warning">
-                {{ message }}
-            </div>
+                <div class="form-group">
+                    <label for="review">Review Text</label>
+                    <textarea id="review" class="form-control bg-dark text-white mr-2" name="review" placeholder="Enter the review content..." rows="3" required></textarea>
+                </div>
+                <div class="form-group">
+                    <div class="custom-control custom-checkbox">
+                        <input id="purchase" class="custom-control-input" type="checkbox" name="purchase" {% if not cars %}disabled{% endif %}>
+                        <label for="purchase" class="text-orange custom-control-label">Have you purchased a vehicle from
+                            {{ dealer_name }}?</label>
+                        <p class="text-muted">(Below you can choose details of purchased vehicle.)</p>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col">
+                        <label for="purchasedate">Purchase Date</label>
+                        <input id="purchasedate" class="form-control bg-dark text-white mr-2" type="date" name="purchasedate" {% if not cars %}disabled{% endif %}>
+                    </div>
+                    <div class="form-group col">
+                        <label for="car">Purchased Car</label>
+                        <select id="car" class="custom-select bg-dark text-white" name="car" {% if not cars %}disabled{% endif %}>
+                            {% for car in cars %}
+                            <option value={{ car.carmodel_id }}>{{ car.carmake.name }} {{ car.name }} - {{ car.year }}
+                            </option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <button class="btn bg-orange text-white" type="submit">Save review</button>
+            </form>
+            {% else %}
+            <p class="lead">Please login to add a review.</p>
             {% endif %}
-            <button class="btn btn-primary" type="submit">Submit</button>
         </div>
-    </form>
-
-    {% endif %}
-
-    </body>
-  <script type="text/javascript">
-      $('.date-own').datepicker({
-         format: 'mm/dd/yyyy'
-       });
- </script>
-</html>
+    </div>
+</div>
+{% endblock %}
